[gd_scene load_steps=3 format=3 uid="uid://cuyj8kg4lgcyb"]

[ext_resource type="Script" uid="uid://10mcaqegpccb" path="res://all_gdscripts/inventory_button.gd" id="1_w8d5m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ty45s"]
size = Vector2(73, 73)

[node name="InventoryButton" type="Button"]
custom_minimum_size = Vector2(75, 75)
anchors_preset = -1
anchor_left = 0.305
anchor_top = 0.285
anchor_right = 0.305
anchor_bottom = 0.285
offset_left = -0.360016
offset_top = 0.319977
offset_right = 74.64
offset_bottom = 75.32
script = ExtResource("1_w8d5m")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 8.0
offset_right = -10.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 31.0
offset_top = 50.0
offset_right = 71.0
offset_bottom = 73.0
horizontal_alignment = 2

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(37.5, 37.5)
shape = SubResource("RectangleShape2D_ty45s")

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
